자산현황 - 대출,공과금 추가